@@ -9,7 +9,6 @@ import com.vatek.hrmtoolnextgen.enumeration.EDayOffStatus;
 import com.vatek.hrmtoolnextgen.exception.BadRequestException;
 import com.vatek.hrmtoolnextgen.repository.jpa.DayOffRepository;
 import com.vatek.hrmtoolnextgen.repository.jpa.UserRepository;
-import com.vatek.hrmtoolnextgen.util.DateUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
@@ -31,52 +30,63 @@ public class DayOffService {
         UserEntity userEntity = userRepository.findById(userId)
                 .orElseThrow(() -> new BadRequestException("User not found with id: " + userId));
 
-        // Validate that endTime is after startTime
-        if (request.getEndTime().isBefore(request.getStartTime()) || request.getEndTime().equals(request.getStartTime())) {
-            throw new BadRequestException("endTime must be after startTime");
-        }
+        LocalDateTime startDateTime = request.getStartTime();
+        LocalDateTime endDateTime = request.getEndTime();
 
-        // Validate that startTime and endTime are on the same day
-        LocalDate startDate = request.getStartTime().toLocalDate();
-        LocalDate endDate = request.getEndTime().toLocalDate();
-        if (!startDate.equals(endDate)) {
-            throw new BadRequestException("startTime and endTime must be on the same day");
-        }
+        validateTimeRange(startDateTime, endDateTime);
+        ensureNoOverlap(userId, startDateTime, endDateTime);
 
-        // Check for overlapping day off requests on the same date
-        var existingDayOffs = dayOffRepository.findAll((root, query, cb) -> {
-            var predicates = new java.util.ArrayList<jakarta.persistence.criteria.Predicate>();
-            predicates.add(cb.equal(root.get("user").get("id"), userId));
-            predicates.add(cb.equal(root.get("delete"), false));
-            // Check if the date matches (same day)
-            predicates.add(cb.equal(
-                    cb.function("DATE", LocalDate.class, root.get("startTime")),
-                    startDate
-            ));
-            return cb.and(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
-        });
-
-        for (DayOffEntity existing : existingDayOffs) {
-            // Check if time ranges overlap
-            if (!(endDateTime.isBefore(existing.getStartTime()) || startDateTime.isAfter(existing.getEndTime()))) {
-                throw new BadRequestException("Day off request overlaps with an existing request");
-            }
-        }
-
-        // Create new day off entity
+        // Create a new day off entity
         DayOffEntity dayOffEntity = new DayOffEntity();
         dayOffEntity.setUser(userEntity);
         dayOffEntity.setRequestTitle(request.getRequestTitle());
         dayOffEntity.setRequestReason(request.getRequestReason());
-        dayOffEntity.setStartTime(request.getStartTime());
-        dayOffEntity.setEndTime(request.getEndTime());
+        dayOffEntity.setStartTime(startDateTime);
+        dayOffEntity.setEndTime(endDateTime);
         dayOffEntity.setStatus(EDayOffStatus.PENDING);
 
         DayOffEntity savedEntity = dayOffRepository.save(dayOffEntity);
-        log.info("Created day off request for user: {} from {} to {}", 
+        log.info("Created day off request for user: {} from {} to {}",
                 userId, startDateTime, endDateTime);
 
         return toDto(savedEntity);
+    }
+
+    private void validateTimeRange(LocalDateTime startDateTime, LocalDateTime endDateTime) {
+        if (!endDateTime.isAfter(startDateTime)) {
+            throw new BadRequestException("endTime must be after startTime");
+        }
+
+        // Disallow day off ranges that cover weekends
+        LocalDate startDate = startDateTime.toLocalDate();
+        LocalDate endDate = endDateTime.toLocalDate();
+        for (LocalDate date = startDate; !date.isAfter(endDate); date = date.plusDays(1)) {
+            switch (date.getDayOfWeek()) {
+                case SATURDAY, SUNDAY ->
+                        throw new BadRequestException("Day off cannot overlap weekends");
+                default -> {
+                }
+            }
+        }
+    }
+
+    private void ensureNoOverlap(Long userId, LocalDateTime startDateTime, LocalDateTime endDateTime) {
+        var existingDayOffs = dayOffRepository.findAll((root, query, cb) -> {
+            var predicates = new java.util.ArrayList<jakarta.persistence.criteria.Predicate>();
+            predicates.add(cb.equal(root.get("user").get("id"), userId));
+            predicates.add(cb.equal(root.get("delete"), false));
+            // Overlap when existing.start < newEnd && existing.end > newStart
+            predicates.add(cb.lessThan(root.get("startTime"), endDateTime));
+            predicates.add(cb.greaterThan(root.get("endTime"), startDateTime));
+            return cb.and(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
+        });
+
+        for (DayOffEntity existing : existingDayOffs) {
+            // Extra guard if repository adds additional records beyond criteria
+            boolean overlaps = existing.getStartTime().isBefore(endDateTime)
+                    && existing.getEndTime().isAfter(startDateTime);
+            if (overlaps) throw new BadRequestException("Day off request overlaps with an existing request");
+        }
     }
 
     @Transactional
@@ -95,7 +105,7 @@ public class DayOffService {
             throw new BadRequestException("Day off request not found");
         }
 
-        DayOffEntity dayOffEntity = dayOffs.get(0);
+        DayOffEntity dayOffEntity = dayOffs.getFirst();
 
         // Check if already processed
         if (dayOffEntity.getStatus() != EDayOffStatus.PENDING) {
@@ -105,8 +115,8 @@ public class DayOffService {
         // Update status
         dayOffEntity.setStatus(request.getStatus());
         DayOffEntity savedEntity = dayOffRepository.save(dayOffEntity);
-        
-        log.info("Updated day off request status to {} for user: {} from {} to {}", 
+
+        log.info("Updated day off request status to {} for user: {} from {} to {}",
                 request.getStatus(), request.getUserId(), request.getStartTime(), request.getEndTime());
 
         return toDto(savedEntity);
@@ -115,16 +125,15 @@ public class DayOffService {
     private DayOffDto toDto(DayOffEntity entity) {
         return DayOffDto.builder()
                 .userId(entity.getUser().getId())
-                .userName(entity.getUser().getUserInfo() != null 
-                        ? entity.getUser().getUserInfo().getFirstName() + " " + 
-                          entity.getUser().getUserInfo().getLastName()
+                .userName(entity.getUser().getUserInfo() != null
+                        ? entity.getUser().getUserInfo().getFirstName() + " " +
+                        entity.getUser().getUserInfo().getLastName()
                         : null)
                 .userEmail(entity.getUser().getEmail())
                 .requestTitle(entity.getRequestTitle())
                 .requestReason(entity.getRequestReason())
-                .startTime(entity.getStartTime().atZone(java.time.ZoneId.systemDefault()).toInstant())
-                .endTime(entity.getEndTime().atZone(java.time.ZoneId.systemDefault()).toInstant())
-                .dateOff(entity.getStartTime().toLocalDate().atStartOfDay(java.time.ZoneId.systemDefault()).toInstant())
+                .startTime(entity.getStartTime())
+                .endTime(entity.getEndTime())
                 .status(entity.getStatus())
                 .build();
     }
